--- a/itemhunt/templates/base.html
+++ b/itemhunt/templates/base.html
@@ -21,8 +21,12 @@
 -->
 
             <ul class="nav navbar-nav navbar-right">
-                <li><p><a class="navbar-brand" href="#">{{ user.username }}</a></p></li>
-                <li><a href="{% url 'logout' %}">Logout</a></li>
+                {% if user.is_authenticated %}
+                    <li><p><a class="navbar-brand" href="#">{{ user.username }}</a></p></li>
+                    <li><a href="{% url 'logout' %}">Logout</a></li>
+                {% else %}
+                    <li><a href="{% url 'login' %}">Login</a></li>
+                {% endif %}
             </ul>
         </div>
     </div>
