--- a/frontend/templates/frontend/view_player.html
+++ b/frontend/templates/frontend/view_player.html
@@ -5,7 +5,7 @@
     {% if error %}
         Error: {{ error }}
     {% else %}
-        <h1 class="text-center">{{ item.name }}</h1>
+        <h1 class="text-center">{{ player.name }}</h1>
         <h2>Properties</h2>
         <table class="table table-striped table-hover ">
             <thead>
@@ -15,11 +15,11 @@
                 </tr>
             </thead>
             <tbody>
-                <tr><td>Name</td><td>{{ item.name }}</td></tr>
-                <tr><td>Type</td><td>{{ item.type }}</td></tr>
-                <tr><td>Points</td><td>{{ item.points }}</td></tr>
-                <tr><td>Position</td><td>{{ item | item_location | safe }}</td></tr>
-                <tr><td>Enabled</td><td>{{ item.enabled }}</td></tr>
+                <tr><td>Name</td><td>{{ player.name }}</td></tr>
+                <tr><td>Points</td><td>{{ total_points }}</td></tr>
+                <tr><td>Items Found</td><td>{{ items_found }}</td></tr>
+                <tr><td>Items Purchased</td><td>{{ items_purchased }}</td></tr>
+                <tr><td>UUID</td><td>{{ player.uuid }}</td></tr>
             </tbody>
         </table>
         <br />
@@ -37,7 +37,7 @@
             <tbody>
             {% for transaction in transactions %}
                 <tr>
-                    <td><a href="{% url 'frontend:view_player' transaction.hunt.id transaction.player.id %}">{{ transaction.player.name }}</a></td>
+                    <td>{{ transaction }}</td>
                     <td>{{ transaction.points }}</td>
                     <td>{{ transaction | transaction_location | safe }}</td>
                     <td>{{ transaction | transaction_item_location| safe }}</td>
