--- a/itemhunt/templates/base.html
+++ b/itemhunt/templates/base.html
@@ -1,36 +1,39 @@
 <head>
     {% load static %}
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link href="{% static 'custom.css' %}" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">Home</a>
+            <a class="navbar-brand" href="/">Item Hunt</a>
         </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-<!--
-            <ul class="nav navbar-nav">
-                <li><a href="{% url 'frontend:index' %}">Page1</a></li>
-            </ul>
-            <ul class="nav navbar-nav">
-                <li><a href="{% url 'frontend:index' %}">Page2</a></li>
-            </ul>
--->
-
-            <ul class="nav navbar-nav navbar-right">
-                {% if user.is_authenticated %}
-                    <li><p><a class="navbar-brand" href="#">{{ user.username }}</a></p></li>
-                    <li><a href="{% url 'logout' %}">Logout</a></li>
-                {% else %}
-                    <li><a href="{% url 'login' %}">Login</a></li>
-                {% endif %}
-            </ul>
-        </div>
+        <ul class="navbar-nav mr-auto">
+             <nav>
+                {% for breadcrumb in request.breadcrumbs %}
+                        {% if breadcrumb.path %}
+                            <a class="breadcrumb-item" href="{{ breadcrumb.path }}">{{ breadcrumb.name }}</a>
+                        {% else %}
+                            <span class="breadcrumb-item active">{{ breadcrumb.name }}</span>
+                        {% endif %}
+                {% endfor %}
+            </nav>
+        </ul>
+        <ul class="navbar-nav ml-auto">
+            {% if user.is_authenticated %}
+                <a class="navbar-brand" href="#">{{ user.username }}</a></p>
+                <a class="navbar-text" href="{% url 'logout' %}">Logout</a>
+            {% else %}
+                <a class="navbar-text" href="{% url 'login' %}">Login</a>
+            {% endif %}
+        </ul>
     </div>
 </nav>
+<br />
 <div class="content container">
     {% block content %}
     {% endblock %}
