--- a/itemhunt/templates/registration/logged_out.html
+++ b/itemhunt/templates/registration/logged_out.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="panel panel-primary">
-  <div class="panel-heading">
-    <h3 class="panel-title">Notice</h3>
+<div class="card">
+  <div class="card-header ">
+    <h3 class="card-title">Notice</h3>
   </div>
-  <div class="panel-body">
+  <div class="card-body">
     You have been logged out.
   </div>
 </div>
