--- a/itemhunt/templates/registration/login.html
+++ b/itemhunt/templates/registration/login.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="col-md-4 center-block ">
-  <form class="form-horizontal"  method="post" action="{% url 'login' %}">
+<div class="container">
+  <form class="form-signin" method="post" action="{% url 'login' %}">
     {% csrf_token %}
     {% for hidden in form.hidden_fields %}
       {{ hidden }}
@@ -28,7 +28,7 @@
         autofocus=""
       {% endif %}>
     <br />
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    <button class="btn btn-lg btn-dark btn-block " type="submit">Sign in</button>
     <input type="hidden" name="next" value="{{ next }}" />
   </form>
 </div>
