Fixed breadcrumb link colors and login/register input box styles

--- a/itemhunt/static/custom.css
+++ b/itemhunt/static/custom.css
@@ -21,13 +21,20 @@
 .form-signin .form-control:focus {
   z-index: 2;
 }
-.form-signin input[type="email"] {
-  margin-bottom: -1px;
+input#id_username.form-control {
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
+input#id_password.form-control {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+  margin-bottom: 10px;
+}
+input#id_password1.form-control {
+  border-radius: 0;
+}
+input#id_password2.form-control {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  margin-bottom: 10px;
 }
