Normlizing style of the home page so it's similiar to the rest

--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+<h1 class="text-center">Home</h1>
+<h2>Hunt List</h2>
 <table class="table table-striped table-hover ">
     <thead>
         <tr>
-            <th>Hunt Name</th>
+            <th>Name</th>
             <th class="text-right">Date</th>
         </tr>
     </thead>
