--- a/frontend/templates/frontend/view_player.html
+++ b/frontend/templates/frontend/view_player.html
@@ -19,7 +19,7 @@
                 <tr><td>Points</td><td>{{ total_points }}</td></tr>
                 <tr><td>Items Found</td><td>{{ items_found }}</td></tr>
                 <tr><td>Items Purchased</td><td>{{ items_purchased }}</td></tr>
-                <tr><td>UUID</td><td>{{ player.uuid }}</td></tr>
+                <tr><td>UUID</td><td><a href="secondlife:///app/agent/{{ player.uuid }}/inspect">{{  player.uuid }}</a></td></tr>
             </tbody>
         </table>
         <br />
@@ -27,7 +27,7 @@
         <table class="table table-striped table-hover ">
             <thead>
                 <tr>
-                    <th>Name</th>
+                    <th>Type</th>
                     <th>Points</th>
                     <th>Player Location</th>
                     <th>Item Location</th>
@@ -37,7 +37,7 @@
             <tbody>
             {% for transaction in transactions %}
                 <tr>
-                    <td>{{ transaction }}</td>
+                    <td>{{ transaction.get_type_name }}</td>
                     <td>{{ transaction.points }}</td>
                     <td>{{ transaction | transaction_location | safe }}</td>
                     <td>{{ transaction | transaction_item_location| safe }}</td>
