Frontend improvements: * Hunt view now showing item counts, hunt items * Player view now showing item names

--- a/frontend/templates/frontend/view_player.html
+++ b/frontend/templates/frontend/view_player.html
@@ -29,6 +29,7 @@
                 <tr>
                     <th>Type</th>
                     <th>Points</th>
+                    <th>Item</th>
                     <th>Player Location</th>
                     <th>Item Location</th>
                     <th class="text-right">Date</th>
@@ -39,6 +40,7 @@
                 <tr>
                     <td>{{ transaction.get_type_name }}</td>
                     <td>{{ transaction.points }}</td>
+                    <td><a href="{% url 'frontend:view_item' transaction.hunt.id transaction.item.id %}">{{ transaction.item }}</a></td>
                     <td>{{ transaction | transaction_location | safe }}</td>
                     <td>{{ transaction | transaction_item_location| safe }}</td>
                     <td class="text-right">{{ transaction.created_on }}</td>
