Delay = #points. 20 points? 20 minute delay before re-activation is allowed Hopefully fixed some of the new exceptions that popped up from i guess a multi-year difference in django versions

--- a/frontend/templates/frontend/view_player.html
+++ b/frontend/templates/frontend/view_player.html
@@ -40,7 +40,7 @@
                 <tr>
                     <td>{{ transaction.get_type_name }}</td>
                     <td>{{ transaction.points }}</td>
-                    <td><a href="{% url 'frontend:view_item' transaction.hunt.id transaction.item.id %}">{{ transaction.item }}</a></td>
+                    <td><a href="{% url 'frontend:view_item' transaction.hunt.id transaction.item_id %}">{{ transaction.item }}</a></td>
                     <td>{{ transaction | transaction_location | safe }}</td>
                     <td>{{ transaction | transaction_item_location| safe }}</td>
                     <td class="text-right">{{ transaction.created_on }}</td>
